making notebook compatible for multitask learning

--- a/pubmedqa/classifier_enc_dec.ipynb
+++ b/pubmedqa/classifier_enc_dec.ipynb
@@ -177,7 +177,7 @@
     "import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "pubmedqa = datasets.load_dataset('pubmed_qa', 'pqa_labeled')\n",
+    "pubmedqa = datasets.load_dataset('pubmed_qa', 'pqa_artificial')\n",
     "pubmedqa_train, pubmedqa_test = train_test_split(pubmedqa['train'])\n",
     "\n",
     "pubmedqa_train.keys()"
@@ -355,9 +355,12 @@
     "        # extract encoder output\n",
     "        encodings = outputs['encoder_last_hidden_state']\n",
     "        pooled = torch.mean(encodings, dim=1)\n",
-    "        logits_ = self.classifier(pooled)\n",
+    "        logits_enc = self.classifier(pooled)\n",
     "        \n",
-    "        return logits_"
+    "        #\n",
+    "        logits_dec = outputs['last_hidden_state']\n",
+    "        \n",
+    "        return logits_enc, logits_dec"
    ]
   },
   {
@@ -422,7 +425,7 @@
     "            input_batch = {k: v.to(device) for k, v in input_batch.items()}\n",
     "            \n",
     "            # forward pass\n",
-    "            logits = model(input_batch)\n",
+    "            logits, _ = model(input_batch)\n",
     "            \n",
     "            # calculate loss\n",
     "            eval_loss += objective_f(\n",
@@ -497,6 +500,8 @@
     "    'adam_epsilon': 1e-8,\n",
     "    'max_sequence_length': 512,\n",
     "    'batch_size': 16,\n",
+    "    'wt_classification': 0.5,\n",
+    "    'wt_generation': 0.5,\n",
     "}\n",
     "no_decay = ['bias', 'LayerNorm.weight']\n"
    ]
@@ -819,14 +824,15 @@
     "    # get dataloaders for training and testing\n",
     "    dataloaders = QADataLoader(\n",
     "        datasets_name='pubmed_qa',\n",
-    "        datasets_config='pqa_labeled',\n",
+    "        datasets_config='pqa_artificial',\n",
     "        label2id=label2id,\n",
     "        tokenizer_name=model_dict[model_idx]['tokenizer'],\n",
     "        max_sequence_length=args['max_sequence_length'],\n",
     "        batch_size=args['batch_size'],\n",
-    "        debug=False\n",
+    "        debug=True\n",
     "    )\n",
-    "    #inspect_dataloader(dataloaders)\n",
+    "    inspect_dataloader(dataloaders)\n",
+    "    break\n",
     "\n",
     "    #\n",
     "    train_loader = dataloaders.dataloader_train\n",
@@ -871,7 +877,8 @@
     "    )\n",
     "\n",
     "    # objective function\n",
-    "    loss_fct = CrossEntropyLoss()\n",
+    "    loss_fct = CrossEntropyLoss(weight=torch.tensor(list(class_wts.values())).to(device))\n",
+    "    loss_fct_dec = CrossEntropyLoss()\n",
     "    \n",
     "    # train\n",
     "    best_model = None\n",
@@ -896,18 +903,23 @@
     "            input_batch = {k: v.to(device) for k, v in input_batch.items()}\n",
     "\n",
     "            # forward pass\n",
-    "            logits = model(input_batch)\n",
+    "            logits, logits_dec = model(input_batch)\n",
     "\n",
     "            # calculate loss\n",
     "            loss = loss_fct(\n",
     "                logits, \n",
     "                batch['encoder_labels'].to(device)\n",
     "            )\n",
+    "            loss_dec = loss_fct_dec(\n",
+    "                logits_dec,\n",
+    "                batch['decoder_labels'].to(device)\n",
+    "            )\n",
     "            \n",
     "            # log info to wandb\n",
     "            wandb.log(\n",
     "                {\n",
-    "                    \"train_loss\": loss,\n",
+    "                    \"classification_loss\": loss,\n",
+    "                    \"generation_loss\": loss_dec,\n",
     "                    \"learning_rate\": optimizer.param_groups[0][\"lr\"],\n",
     "                    \"epoch\": each_epoch,\n",
     "                },\n",
@@ -916,6 +928,7 @@
     "            \n",
     "\n",
     "            # backpropagation\n",
+    "            loss = (wt_classification * loss) + (wt_generation * loss_dec)\n",
     "            loss.backward()\n",
     "\n",
     "            # update parameters and lr\n",
@@ -1154,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
