updating the last changes

--- a/pubmedqa/predict_labels.ipynb
+++ b/pubmedqa/predict_labels.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "3c4b23a6-a674-458b-84da-bc2456887356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/users/vijeta/miniconda3/envs/bioqa/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import json\n",
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7983248f-7bd3-4629-885a-527bd6025e0f",
    "metadata": {},
    "outputs": [
@@ -291,7 +300,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "211269it [00:00, 654253.68it/s]\n"
+      "Reusing dataset pubmed_qa (/home/users/vijeta/.cache/huggingface/datasets/pubmed_qa/pqa_artificial/1.0.0/dd4c39f031a958c7e782595fa4dd1b1330484e8bbadd4d9212e5046f27e68924)\n",
+      "100%|████████████████████████████████████████████| 1/1 [00:00<00:00, 207.82it/s]\n",
+      "  0%|                                | 431/211269 [1:06:48<540:58:05,  9.24s/it]"
      ]
     }
    ],
@@ -300,8 +311,8 @@
     "\n",
     "#\n",
     "data_all = QADataLoader(\n",
-    "    datasets_name=None,#'pubmed_qa',\n",
-    "    datasets_config=None,#'pqa_artificial',\n",
+    "    datasets_name='pubmed_qa',\n",
+    "    datasets_config='pqa_artificial',\n",
     "    label2id=label2id,\n",
     "    tokenizer_name=model_dict[0]['tokenizer'],\n",
     "    max_sequence_length=args['max_sequence_length'],\n",
@@ -809,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
